--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,39 @@
-div {
-	border: 1px solid red;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+*{
+  box-sizing: content-box;
+  margin: 0 auto;
+  padding: 0;
+  font-family:Roboto, Arial, sans-serif;
+  box-sizing: border-box;
 }
 
-div h1 {
-	text-align: center;
+#calculadora{
+  text-align: center;
 }
 
-div table {
-	margin: 4px auto;
-	border: 1px double black;
-	height: 50%;
-	width: 50%;
-	text-align: center;
-	font-size: 25px;
+#calculadora table {
+  background-color: #CFD8DC; 
+  border: 0.0625rem double black;
+  font-size: 1.5625rem;
 }
 
-div td {
-	margin: 4px;
-	border: 1px double black;
+#calculadora td input {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
-div td input {
-	width: 100%;
-	height: 100%;
-	font-size: 25px;
-	text-align: center;
+#calculadora td input:hover {
+  color: #fff;
+  background-color: #546E7A;
 }
 
-div td input#tela {
-	text-align: right;
+#calculadora td input#tela {
+  text-align: right;
+  width: 100%;
+}
+
+#calculadora td input#tela:hover {
+  color: #000;
+  background-color: #fff;
 }
