--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-*{
-  box-sizing: content-box;
+#calculadora table {
   margin: 0 auto;
   padding: 0;
-  font-family:Roboto, Arial, sans-serif;
-  box-sizing: border-box;
-}
-
-#calculadora{
-  text-align: center;
-}
-
-#calculadora table {
+  box-sizing: content-box;
   background-color: #CFD8DC; 
-  border: 0.0625rem double black;
+  border: 0 double black;
   font-size: 1.5625rem;
 }
 
-#calculadora td input {
-  width: 2.5rem;
-  height: 2.5rem;
+#calculadora tr {
+  width: 100%;
+  height:100%;
+}
+
+#calculadora tr td input {
+  width: 100%;
+  height:100%;
 }
 
 #calculadora td input:hover {
@@ -30,7 +24,6 @@
 
 #calculadora td input#tela {
   text-align: right;
-  width: 100%;
 }
 
 #calculadora td input#tela:hover {
